--- a/resources.qmd
+++ b/resources.qmd
@@ -2,6 +2,8 @@
 title: "Resources"
 ---
 
+My own notes for building and maintaining reproducibile workflow in RProjects can be found [here](https://daniela-palleschi.github.io/workflow/), or by clicking 'Workflow' in the navigation bar.
+
 As researchers, it is important we plan and take into account how we analyse our data before we being data collection. I recommend the following resources for students looking to get started with linear mixed models (LMMs) in R, or for researchers looking to brush up on or expand their knowledge. If you've never analysed data using LMMs in R before, I'd recommend starting with the textbooks and tutorials listed. Otherwise, working through the list of "required reading" will ensure you're aware of the advantages but also pitfalls of LMMs. I plan to add resources for Bayesian analyses soon. Full disclosure: I'm still working through some of these materials myself.
 
 ## Data Skills with R and RMarkdown
