--- a/cv.qmd
+++ b/cv.qmd
@@ -2,7 +2,7 @@
 title: "Curriculum Vitae"
 ---
 
-View PDF [here]()
+View PDF [here](https://github.com/daniela-palleschi/cv/blob/main/cv.pdf)
 
 ## Academic appointments
 
@@ -41,6 +41,8 @@ Doctoral scholarship
 
 ## Teaching Experience
 
+See [Teaching](https://daniela-palleschi.github.io/teaching.html)
+
 **Reproducible analysis reports with eye-tracking reading time data** [2023]{style="float:right"}<br>
 M.A. course, Institute for German Language and Linguistics, Humboldt-Universität zu Berlin
 
@@ -67,11 +69,11 @@ SOL International School of Language, Toronto, Canada
 
 ## Publications
 
-See [Publications]()
+See [Publications](https://daniela-palleschi.github.io/publications.html)
 
 ## Presentations
 
-See [Presentations]()
+See [Presentations](https://daniela-palleschi.github.io/presentations.html)
 
 ## Workshops, summer schools, journal clubs (attendance)
 
