update index.qmd with about template trestles

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,18 @@
 ---
 title: "Daniela Palleschi"
-editor_options: 
-  chunk_output_type: console
+about:
+  template: trestles
+  image: images/profile.png
+  links:
+    - icon: twitter
+      text: twitter
+      href: https://twitter.com/dpalleswho
+    - icon: github
+      text: Github
+      href: https://github.com/daniela-palleschi
+format:
+  html:
+    code-tools: false
 ---
 
 I am currently a scientific staff member and statistics consultant at the Institute of German Language and Linguistics at the Humboldt-Universität zu Berlin. I am also a doctoral fellow at the Einstein Center for Neurosciences at the Charité - Universitätsmediyin Berlin, and part of the doctoral program at the Berlin School of Mind and Brain. My research interests include the processing of temporal relations and high-level real-world knowledge, and language processing more broadly.
