--- a/teaching.qmd
+++ b/teaching.qmd
@@ -4,43 +4,65 @@ editor_options:
   chunk_output_type: console
 ---
 
-## Current courses (Summer Semester 2023)
+## Upcoming courses (Winter Semester 2023/24)
 
-- [Reproducible analyses for eye-tracking reading data](https://daniela-palleschi.github.io/repo-eda/) (M.A. Course)
-- *Angewandte Datenanalyse und -visualisierung* (B.A. Course)
+- Regression for Linguists (M.A.)
+- Angewandte Datenanalyse und -visualisierung (B.A.)
 
 ## Past courses
 
+All courses listed were taught at the Institut für deutsche Sprache und Linguistik (Department of German Language and Linguistics), Humboldt-Universität zu Berlin, in addition to any other institutes given.
+
 ```{r}
 # load packages
-pacman::p_load(tidyverse, knitr, kableExtra)
+pacman::p_load(tidyverse, knitr, kableExtra, gt)
 ```
-
 
 ```{r}
 # past IdSL courses
 tribble(
-  ~"Year", ~"Semester", ~"Course title", ~"Level",
-  "2020", "SoSe", "Language and the Brain (Tutorial)", "M.A. (Berlin School of Mind and Brain)",
-  "2019", "SoSe", "Language and the Brain (Tutorial)", "M.A. (Berlin School of Mind and Brain)",
-  "2018/19", "WiSe", "Introduction to Statistics for Linguistics with R and RStudio", "M.A.",
-  "2018", "SoSe", "Language and the Brain (Tutorial)", "M.A. (Berlin School of Mind and Brain)"
-) %>% 
-  kbl() %>% 
-  kable_styling()
+  ~"Year", ~"Semester", ~"Course title", ~"Level", ~"Link",
+  "2023", "SoSe", "Reproducible analyses for eye-tracking reading data", "M.A.", "https://daniela-palleschi.github.io/repo-eda/",
+  "2023", "SoSe", "Angewandte Datenanalyse und -visualisierung (EN: Applied data analysis and visualisation)", "B.A.", "NA",
+  "2020", "SoSe", "Language and the Brain (Tutorial)", "M.A. (Berlin School of Mind and Brain)", "NA",
+  "2019", "SoSe", "Language and the Brain (Tutorial)", "M.A. (Berlin School of Mind and Brain)", "NA",
+  "2018/19", "WiSe", "Introduction to Statistics for Linguistics with R and RStudio", "M.A.", "NA",
+  "2018", "SoSe", "Language and the Brain (Tutorial)", "M.A. (Berlin School of Mind and Brain)", "NA"
+  ) %>% 
+  mutate(
+    `Course title` = ifelse(Link=="NA", `Course title`, glue::glue("[{`Course title`}]({Link})")),
+        `Course title` = map(`Course title`, gt::md)) %>% 
+  select(-Link) %>% 
+  gt() %>% 
+  cols_align(
+    align = "left",
+    columns = everything()
+  )
+
+## solution for adding hyperlinks to tibbles: https://community.rstudio.com/t/create-interactive-links-in-gt-table-in-rmarkdown/70266/2
 ```
+
 
 ## Workshops
 
 ```{r}
 # workshop courses
 tribble(
-  ~"Year", ~"Workshop title", ~"Institution", ~"Materials",
-  "2020", "Introduction to Ibex and PennController:
-Internet Based Experiments", "Institut für deutsche Sprache und Linguistik (Department of German Language and Linguistics), Humboldt-Universität zu Berlin", "<a href='https://box.hu-berlin.de/d/ff964c88ad9c47e781b5/'>Materials</a>"
-) %>% 
-  kbl(escape=FALSE,format = "html")%>%
-  kable_styling()
+  ~ "Year", ~ "Workshop title", ~ "Institution", ~ "Link", 
+  "2020", "Introduction to Ibex and PennController: Internet Based Experiments", "Institut für deutsche Sprache und Linguistik (Department of German Language and Linguistics), Humboldt-Universität zu Berlin", "https://box.hu-berlin.de/d/ff964c88ad9c47e781b5/"
+) %>%
+  mutate(
+    `Workshop title` = ifelse(
+      Link == "NA",
+      `Workshop title`,
+      glue::glue("[{`Workshop title`}]({Link})")
+    ),
+    `Workshop title` = map(`Workshop title`, gt::md)
+  ) %>%
+  select(-Link) %>%
+  gt() %>%
+  cols_align(align = "left",
+             columns = everything())
 ```
 
 
