--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Daniela Palleschi"
-date-modified: last-modified
+# date-modified: last-modified
 about:
   id: about-heading
   template: trestles
