update defence info

--- a/index.qmd
+++ b/index.qmd
@@ -48,7 +48,7 @@ In **August 2024** I will be giving a workshop at the [Summer School of Linguist
 
 In **May 2024** I will be giving a talk entitled *Elvis is dead: lifeme-tense congruence effects for the past, present (perfect), and future* at [Chronos 15](https://chronos15.sciencesconf.org/) in Toulouse, France.
 
-On **April 8th, 2024** I will defend my doctoral thesis! The defence will public and hybrid. If you would like to attend in person or over Zoom, find more information [here](https://fakultaeten.hu-berlin.de/de/sprachlit/akad_ang/promotion).
+On **April 8th, 2024** I will defend my doctoral thesis! If you would like to attend in person, find more information [here](https://fakultaeten.hu-berlin.de/de/sprachlit/akad_ang/promotion).
 
 In **June 2023** I submitted my [doctoral thesis](https://twitter.com/dpalleswho/status/1671621403240480774)!
 
